feat: complete lectures 6-8 - Added content for lectures 6, 7, and 8

--- a/docs/stylex.css
+++ b/docs/stylex.css
@@ -4,3 +4,11 @@
   margin-right: auto;
   width: 50%;
 }
+
+.md-sidebar {
+  margin-right: 1cm;
+}
+
+.md-main, .md-content {
+  margin-left: 1cm;
+}
